--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container">
         <div class="head row text-center" style="background: #fafafa">
             <div class="col-lg-2">
-                <img src="assets/logo_2024.PNG" alt="Conference Template Banner" class="img-fluid" max-height="120px">
+                <img src="assets/logo_2024.png" alt="Conference Template Banner" class="img-fluid" max-height="120px">
             </div>
             <div class="col-lg-10 pt-3">
                 <div class="top-right">
@@ -88,13 +88,13 @@
                 <img src="./assets/slide1.PNG" class="img-fluid w-100">
             </div>
             <div class="slide">
-                <img src="./assets/price1_2022.PNG" class="img-fluid w-100">
+                <img src="./assets/price1_2022.png" class="img-fluid w-100">
             </div>
             <div class="slide">
-                <img src="./assets/price2_2022.PNG" class="img-fluid w-100">
+                <img src="./assets/price2_2022.png" class="img-fluid w-100">
             </div>
             <div class="slide">
-                <img src="./assets/price3_2022.PNG" class="img-fluid w-100">
+                <img src="./assets/price3_2022.png" class="img-fluid w-100">
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
